url search params eklendi

--- a/quiz.html
+++ b/quiz.html
@@ -8,14 +8,17 @@
     <link rel="stylesheet" href="quiz.css">
     <link rel="icon" type="image/x-icon" href="/img/img7.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;1,200;1,300;1,600&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;1,200;1,300;1,600&display=swap"
+        rel="stylesheet">
     <title>Quiz-questions</title>
 </head>
 
 <body>
-   sss
-<script src="index.js"></script>
+    sss
+    <script src="index.js"></script>
+    <script>console.log(username);</script>
 </body>
 
 </html>
