--- a/quiz.html
+++ b/quiz.html
@@ -9,16 +9,36 @@
     <link rel="icon" type="image/x-icon" href="/img/img7.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;1,200;1,300;1,600&display=swap"
-        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Quiz-questions</title>
 </head>
+<!-- "onload" sayfa yüklendiğinde ilk çalışacak fonksiyon -->
+<body onload="control_user()">
+   
+<header>
+    <div class="logo">
+        <img src="img/img7.png" alt="">
+        <h1>Q<span>UIZ</span>Z <span>APP</span></h1>
+    </div>
+    <ul class="liste">
+        <li>SCORE</li>
+        <li>TIMER</li>
+        <li id="icon"> 
+            <i class="fa-regular fa-circle-user"></i><span id="user"></span>
+        </li>
+    </ul>
+</header>
+<main>
+    <div id="sidebar">
+        <button class="menu-icon"><i class="fa-solid fa-bars"></i></button>
+    </div>
+    <div id="content"></div>
+</main>
 
-<body>
-    sss
-    <script src="index.js"></script>
-    <script>console.log(username);</script>
+    <script src="quiz.js"></script>
 </body>
 
 </html>
