menü butonları eklendi

--- a/quiz.html
+++ b/quiz.html
@@ -33,9 +33,11 @@
 </header>
 <main>
     <div id="sidebar">
-        <button class="menu-icon"><i class="fa-solid fa-bars"></i></button>
+        <button class="menu-icon" id="menu-icon1"><i class="fa-solid fa-bars"></i></button>
     </div>
-    <div id="content"></div>
+    <div id="content">
+        <button class="menu-icon" id="menu-icon2"><i class="fa-solid fa-bars"></i></button>
+    </div>
 </main>
 
     <script src="quiz.js"></script>
