--- a/quiz.html
+++ b/quiz.html
@@ -33,10 +33,11 @@
 </header>
 <main>
     <div id="sidebar">
-        <button class="menu-icon" id="menu-icon1"><i class="fa-solid fa-bars"></i></button>
+        <button class="menu-icon" id="menu-icon1" onclick="handleMenu(`sol`)" ><i class="fa-solid fa-bars"></i></button>
     </div>
     <div id="content">
-        <button class="menu-icon" id="menu-icon2"><i class="fa-solid fa-bars"></i></button>
+        <button class="menu-icon" id="menu-icon2" onclick="handleMenu(`sağ`)" ><i class="fa-solid fa-bars"></i></button>
+        
     </div>
 </main>
 
