--- a/quiz.html
+++ b/quiz.html
@@ -42,7 +42,19 @@
         <div id="content">
             <button class="menu-icon" id="menu-icon2" onclick="handleMenu(`sağ`)"><i
                     class="fa-solid fa-bars"></i></button>
-            <div class="quiz"></div>
+            <div class="quiz">
+                
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni, dolorem!</p>
+                <input type="radio" name="1" id="1">
+                <label for="1">Lorem ipsum dolor sit.</label>
+                <input type="radio" name="1" id="1">
+                <label for="1">Lorem ipsum dolor sit.</label>
+                <input type="radio" name="1" id="1">
+                <label for="1">Lorem ipsum dolor sit.</label>
+                <input type="radio" name="1" id="1">
+                <label for="1">Lorem ipsum dolor sit.</label>
+
+            </div>
             <div class="soru">
                 <span class="number" id="soru1">1</span>
                 <span class="number" id="soru2">2</span>
