--- a/quiz.html
+++ b/quiz.html
@@ -42,30 +42,30 @@
         <div id="content">
             <button class="menu-icon" id="menu-icon2" onclick="handleMenu(`sağ`)"><i
                     class="fa-solid fa-bars"></i></button>
-            <div class="quiz">
+            <div class="quiz"  >
 
                 <p id="question">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni, dolorem!</p>
                 <div class="answer-main">
                     <span  class="answer-container">
-                        <input type="radio" name="1" id="answer1">
-                        <label for="1">Lorem ipsum dolor sit.</label> 
+                        <input type="radio" name="1" id="answer1" >
+                        <label id="option1" for="1">Lorem ipsum dolor sit.</label> 
                     </span>
                     <span class="answer-container"> 
                         <input type="radio" name="1" id="answer2">
-                        <label for="1">Lorem ipsum dolor sit amet consectetur.</label>
+                        <label id="option2" for="1">Lorem ipsum dolor sit amet consectetur.</label>
                     </span>
                     <span class="answer-container"> 
                         <input type="radio" name="1" id="answer3">
-                        <label for="1">Lorem ipsum dolor sit.</label>
+                        <label id="option3" for="1">Lorem ipsum dolor sit.</label>
                     </span>
                     <span class="answer-container"> 
                         <input type="radio" name="1" id="answer4">
-                        <label for="1">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</label>
+                        <label id="option4" for="1">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</label>
                     </span>
                 </div>
                <div class="button-container">
-                <button class="quiz-btn" id="prev">Prev</button> 
-                <button class="quiz-btn" id="next">Next</button> 
+                <button class="quiz-btn" id="prev" onclick="soruyuAzalt()">Prev</button> 
+                <button class="quiz-btn" id="next" onclick="soruyuArttır()">Next</button> 
                 <button class="quiz-btn" id="check">Check Answer</button> 
                 <button class="quiz-btn" id="finish">Finish Quiz</button> 
 
@@ -91,3 +91,4 @@
 </body>
 
 </html>
+<h1>.</h1>
